check-8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ca1
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
